k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cust1

---
apiVersion: v1
kind: Namespace
metadata:
  name: cust2
