k8s/services-cust1.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-cust1
  namespace: cust1
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-cust1
  namespace: cust1
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
